@startuml

entity users {
  id : UUID <<PK>>
  firstname
  lastname
  role
  email
  password_hash
}

entity refresh_tokens {
  id : UUID <<PK>>
  user_id : UUID <<FK>>
  token_hash
  expires_at
  revoked
}

entity donors {
  id : UUID <<PK>>
  name
  region
  donor_type
}

entity schools {
  id : UUID <<PK>>
  name
  region
  school_type
  goal
  progress
}

entity schools_needs {
  id : UUID <<PK>>
  school_id : UUID <<FK>>
  item_name
  quantity
  amount
}

entity donations {
  id : UUID <<PK>>
  donor_id : UUID <<FK>>
  school_id : UUID <<FK>>
  amount
  donation_type
  status
}

entity donation_items {
  id : UUID <<PK>>
  donation_id : UUID <<FK>>
  item_name
  quantity
  amount
}

entity contacts {
  id : UUID <<PK>>
  donor_id : UUID <<FK>>
  school_id : UUID <<FK>>
}

entity audit_logs {
  id : UUID <<PK>>
  user_id : UUID <<FK>>
  entity_type
  action
}

users ||--o{ donors
users ||--o{ schools
users ||--o{ donations
users ||--o{ refresh_tokens

donors ||--o{ donations
schools ||--o{ donations

schools ||--o{ schools_needs
donations ||--o{ donation_items

donors ||--o{ contacts
schools ||--o{ contacts

users ||--o{ audit_logs

@enduml